--- a/Tool/Tool.vcxproj
+++ b/Tool/Tool.vcxproj
@@ -199,6 +199,7 @@
     <ClInclude Include="CTerrain.h" />
     <ClInclude Include="CTexture.h" />
     <ClInclude Include="CTextureMgr.h" />
+    <ClInclude Include="CUnit.h" />
     <ClInclude Include="CUnitTool.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="MainFrm.h" />
@@ -221,6 +222,7 @@
     <ClCompile Include="CTerrain.cpp" />
     <ClCompile Include="CTexture.cpp" />
     <ClCompile Include="CTextureMgr.cpp" />
+    <ClCompile Include="CUnit.cpp" />
     <ClCompile Include="CUnitTool.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="pch.cpp">
